--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
 <h1> This is my first web page powered by GitHub Pages </h1>
-Thanks GitHub
+<br> This page is going to be dedicated to give information about Coronavirus outbreak in Brazil. We´re going to show statistics, charts and other nunerical informations.
+  
 </html>
