--- a/index.html
+++ b/index.html
@@ -1,5 +1,81 @@
-<html>
-<h1> This is my first web page powered by GitHub Pages </h1>
-<br> This page is going to be dedicated to give information about Coronavirus outbreak in Brazil. We´re going to show statistics, charts and other nunerical informations.
-  
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amazônia: Tesouro da Biodiversidade</title>
+    <!-- Adicione o link para o Bootstrap online -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        /* Estilos personalizados para esta página */
+        body {
+            background-color: #2c6e49; /* Verde-escuro */
+            color: #fff; /* Texto branco */
+        }
+
+        header {
+             background-image: url('Imagens/IMG_8178.jpg'); /* Substitua pelo caminho da sua imagem de floresta */
+            background-size: cover;
+            background-position: center;
+            padding: 100px 0;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 3em;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        section {
+            background-color: rgba(255, 255, 255, 0.2); /* Fundo com transparência */
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        footer {
+            background-color: #1d4d2b; /* Verde mais escuro para o rodapé */
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Amazônia: Tesouro da Biodiversidade</h1>
+    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- Inclua links para outras páginas, se desejar -->
+    </nav>
+    <main class="container mt-4">
+        <section>
+            <h3>A Floresta Amazônica, localizada na região norte da América do Sul, é um dos lugares mais extraordinários e ricos em biodiversidade do planeta. Abrangendo nove países, ela se estende por cerca de 6,7 milhões de quilômetros quadrados, representando mais da metade das florestas tropicais remanescentes no mundo. Nessa vasta região, encontramos uma incrível variedade de vida selvagem, ecossistemas complexos e fatos impressionantes.
+
+Biodiversidade sem igual: A Amazônia abriga aproximadamente 10% de todas as espécies conhecidas da Terra. Estima-se que mais de 390 bilhões de árvores, pertencentes a cerca de 16.000 espécies, cresçam aqui.
+
+O pulmão do mundo: A Amazônia é frequentemente chamada de "o pulmão do mundo" devido à sua capacidade de absorver grandes quantidades de dióxido de carbono e liberar oxigênio. As árvores e plantas desempenham um papel crucial na regulação do clima global.
+
+Rios majestosos: A bacia amazônica abriga o Rio Amazonas, o mais longo do mundo, e um intrincado sistema de afluentes. É um importante meio de transporte e lar de diversas espécies aquáticas, incluindo o boto-cor-de-rosa e os temidos pirarucus.
+
+Fauna fascinante: A Amazônia abriga animais incríveis, como a onça-pintada, a arara-azul, o tamanduá-bandeira, o tucano, o peixe-elétrico e a preguiça. É também o habitat do icônico boto-vermelho e do raro macaco-aranha.
+
+Ameaças à floresta: Infelizmente, a Amazônia enfrenta ameaças constantes de desmatamento, incêndios florestais e atividades humanas, que colocam em risco a biodiversidade única e a estabilidade climática que ela oferece.
+
+Preservar a Amazônia é essencial para o futuro do nosso planeta. É um ecossistema que merece nossa proteção e admiração, pois é o lar de inúmeras espécies incríveis e desempenha um papel vital na regulação do clima global. Devemos trabalhar juntos para garantir que essa maravilha natural continue a prosperar para as gerações futuras.</h3>
+           
+        </section>
+        <!-- Adicione mais seções para outras informações -->
+    </main>
+    <footer>
+        <p>&copy; 2023 Seu Nome. Todos os direitos reservados.</p>
+    </footer>
+    
+    <!-- Adicione o link para o Bootstrap JavaScript online se necessário -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 </html>
